[gd_scene load_steps=7 format=2]

[ext_resource path="res://widgets/PageDragger.gd" type="Script" id=1]
[ext_resource path="res://res/example.png" type="Texture" id=2]
[ext_resource path="res://res/fonts/button_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://widgets/DropSeparator.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
bg_color = Color( 0.105882, 0.105882, 0.105882, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="PageDragger" type="HBoxContainer"]
margin_right = 93.0
margin_bottom = 82.0
mouse_filter = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropSeparator2" type="Button" parent="."]
visible = false
margin_right = 6.0
margin_bottom = 233.0
focus_mode = 0
mouse_filter = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
disabled = true
enabled_focus_mode = 0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 149.0
margin_bottom = 233.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 149.0
margin_bottom = 211.0
texture = ExtResource( 2 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 215.0
margin_right = 149.0
margin_bottom = 233.0
custom_fonts/font = ExtResource( 3 )
text = "dwadawdwadw"
align = 1

[node name="DropSeparator" type="Button" parent="."]
margin_left = 153.0
margin_right = 159.0
margin_bottom = 233.0
focus_mode = 0
mouse_filter = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
disabled = true
enabled_focus_mode = 0
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 163.0
margin_right = 163.0
margin_bottom = 233.0
[connection signal="gui_input" from="." to="." method="_on_PageDragger_gui_input"]
[connection signal="mouse_exited" from="." to="." method="_on_PageDragger_mouse_exited"]
